--- a/_includes/link-previews.html
+++ b/_includes/link-previews.html
@@ -1,8 +1,8 @@
 <!-- That file is not particularly elegant. This will need a refactor at some point. -->
 <style>
   content a.internal-link {
-    border-color: #8b88e6;
-    background-color: #efefff;
+    border-color:  #e6fff2;
+    background-color: #e6fff2;
   }
 
   #tooltip-wrapper {
