--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,6 @@
 <div>
-    <a class="internal-link" href="{{ site.baseurl }}/"><b>{{ site.title }}</b></a>
+    <a class="internal-link" href="{{ site.baseurl }}/"><b> Home 🌱 </b></a>
+    <a class="internal-link" href="{{ site.baseurl }}/oferta"><b> Oferta 🌱 </b></a>
+    <a class="internal-link" href="{{ site.baseurl }}/kariera"><b> Współpraca 🌱 </b></a>
+    <a class="internal-link" href="{{ site.baseurl }}/onas"><b> O nas 🌱 </b></a>
 </div>
